--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,19 +1,16 @@
 name: iu_design
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
 
-
 dependencies:
   flutter:
     sdk: flutter
-
 
   cupertino_icons: ^1.0.2
 
@@ -23,18 +20,17 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
 
-
 flutter:
   uses-material-design: true
-  #fonts:
-  #  - family: Lato
+  assets:
+    - assets/img/people.jpg
+    - assets/img/ann.jpg
+    - assets/img/girl.jpg
+  
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: fonts/Lato-Regular.ttf
+  #  - family: LatoThin
   #    fonts:
-  #      - asset: fonts/Lato-Regular.ttf
-  #      # 
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  #      - asset: fonts/Lato-Thin.ttf
